# gitlab_plugin

./: README.md  pyproject.toml
.cursor/: SKILLS.md
.cursor/skills/gitlab-mr-cli/: SKILL.md  SKILL.md~
src/gitlab_mr/: __init__.py  cli.py  client.py  models.py  parsing.py  position.py
tests/: test_cli.py  test_client.py  test_normalize.py  test_parsing.py  test_position.py
