[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-mr-cli"
version = "0.1.0"
description = "CLI for GitLab merge request discussions and creation (JSON-first, agent-friendly)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "httpx>=0.26,<1",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
gitlab-mr = "gitlab_mr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
